...
        app:layout_constraintStart_toEndOf="@+id/header_idp_choice"
        app:layout_constraintTop_toTopOf="@+id/header_idp_choice">
        <View style="@style/CustomWingInner" />
    </FrameLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_google_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
